# rust-website-example

./: Cargo.toml  Rocket.toml
migrations/2020-03-05-154539_create_clicks/: down.sql  up.sql
src/: main.rs  schema.rs
tls/: cert.pem  key.pem
