[package]
name = "rust-web-example"
version = "0.1.0"
authors = ["Taylor Hornby <taylor@defuse.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.4.3", features = ["tls"] }
diesel = { version = "1.3", features = ["sqlite", "r2d2"] }

[dependencies.rocket_contrib]
version = "0.4.3"
default-features = false
features = ["diesel_sqlite_pool"]
